Added more options to allow Spark based tests to run, added comments